--- a/css/remixpg.html
+++ b/css/remixpg.html
@@ -9,6 +9,7 @@
 	<ul>
 		<li><a href="index.html">About</a></li>
 		<li><a href="remixpg.html">RemixCollage</a></li>
+		<li><a href="glitchart.html">Glitch Art</a></li>
 		<li><a href="sound/video.html">SoundVideo</a></li>
 		<li> Placeholder1</li>
 		<li> Placeholder2 </li>
