--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <p> Vivian Maier</p>
 <img src="vivianmaier.jpg">
 <h2> My Photography</h2>
-<img src="encounter.jpg">
+<img src="encounter2.jpg">
 <link rel="stylesheet" type="text/css" href="file:///Users/KasandraFlores/Desktop/portfolio/css/remixpg.html">
 
 </body>
