--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
 <h2> Favorite Photographer</h2>
 <p> Vivian Maier</p>
-<img src="vivianmaier.jpg">
+<img src="images/vivianmaier.jpg">
 <h2> My Photography</h2>
-<img src="encounter2.jpg">
+<img src="images/encounter2.jpg">
 <link rel="stylesheet" type="text/css" href="file:///Users/KasandraFlores/Desktop/portfolio/css/remixpg.html">
 
 </body>
